--- a/package.json
+++ b/package.json
@@ -15,5 +15,21 @@
   "bugs": {
     "url": "https://github.com/Marcosschwaab/ANMAR25_DSUP_TASKLY/issues"
   },
-  "homepage": "https://github.com/Marcosschwaab/ANMAR25_DSUP_TASKLY#readme"
+  "homepage": "https://github.com/Marcosschwaab/ANMAR25_DSUP_TASKLY#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mysql2": "^3.14.0",
+    "typeorm": "^0.3.22",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.14.1",
+    "eslint": "^9.24.0",
+    "prettier": "^3.5.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
+  }
 }
