chore: created project folder structure and package.json configuration

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "taskly",
   "version": "1.0.0",
   "description": "API Taskly - UOL Compass",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "tsc",
+    "start": "tsc -w"
   },
   "repository": {
     "type": "git",
