--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,18 @@
-# Dependency directories
+# Dependencies
 node_modules/
+dist/
+build/
 
+# Build output
+*.min.js
+*.bundle.js
 
 # Optional npm cache directory
 .npm
 
 # Optional eslint cache
 .eslintcache
-
+.eslintignore
 
 # dotenv environment variable files
 .env
@@ -15,3 +20,31 @@ node_modules/
 .env.test.local
 .env.production.local
 .env.local
+
+# Prettier
+.prettierignore
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Package files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Documentation
+*.md
+*.txt
+*.log 
