--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,6 @@
-# Dependencies
-node_modules/
-dist/
-build/
-
-# Build output
-*.min.js
-*.bundle.js
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-.eslintignore
-
-# dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-
-# Prettier
-.prettierignore
-
-# IDE and editor files
 .idea/
 .vscode/
-*.swp
-*.swo
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Package files
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-
-# Documentation
-*.md
-*.txt
-*.log 
+node_modules/
+build/
+tmp/
+temp/
