--- a/package.json
+++ b/package.json
@@ -1,48 +1,50 @@
 {
-  "name": "taskly",
-  "version": "1.0.0",
-  "description": "API Taskly - UOL Compass",
-  "main": "./dist/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "tsc",
-    "start:dev": "nodemon src/index.ts --watch ./src",
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
-    "lint": "eslint src/**/*.ts",
-    "prettier": "prettier --write ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Marcosschwaab/ANMAR25_DSUP_TASKLY.git"
-  },
-  "author": "Marcos Schwaab",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Marcosschwaab/ANMAR25_DSUP_TASKLY/issues"
-  },
-  "homepage": "https://github.com/Marcosschwaab/ANMAR25_DSUP_TASKLY#readme",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "mysql2": "^3.14.0",
-    "typeorm": "^0.3.22",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.14.1",
-    "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-prettier": "^5.2.6",
-    "globals": "^16.0.0",
-    "nodemon": "^3.1.9",
-    "prettier": "^3.5.3",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.30.1"
-  }
+   "name": "taskly",
+   "version": "1.0.0",
+   "description": "API Taskly - UOL Compass",
+   "main": "./dist/index.js",
+   "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "compile": "tsc",
+      "start:dev": "nodemon src/index.ts --watch ./src",
+      "start": "ts-node src/index.ts",
+      "dev": "nodemon src/index.ts",
+      "lint": "eslint src/**/*.ts",
+      "prettier": "prettier --write .",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/Marcosschwaab/ANMAR25_DSUP_TASKLY.git"
+   },
+   "author": "Marcos Schwaab",
+   "license": "ISC",
+   "bugs": {
+      "url": "https://github.com/Marcosschwaab/ANMAR25_DSUP_TASKLY/issues"
+   },
+   "homepage": "https://github.com/Marcosschwaab/ANMAR25_DSUP_TASKLY#readme",
+   "dependencies": {
+      "cors": "^2.8.5",
+      "dotenv": "^16.5.0",
+      "express": "^5.1.0",
+      "mysql2": "^3.14.0",
+      "reflect-metadata": "^0.2.2",
+      "typeorm": "0.3.22",
+      "zod": "^3.24.2"
+   },
+   "devDependencies": {
+      "@eslint/js": "^9.24.0",
+      "@types/cors": "^2.8.17",
+      "@types/express": "^5.0.1",
+      "@types/node": "^22.14.1",
+      "eslint": "^9.24.0",
+      "eslint-config-prettier": "^10.1.2",
+      "eslint-plugin-prettier": "^5.2.6",
+      "nodemon": "^3.1.9",
+      "prettier": "^3.5.3",
+      "ts-node": "^10.9.2",
+      "ts-node-dev": "^2.0.0",
+      "typescript": "^5.8.3",
+      "typescript-eslint": "^8.30.1"
+   }
 }
